adaptiv wifout 4 page

--- a/app/product-catalog.html
+++ b/app/product-catalog.html
@@ -9,62 +9,75 @@
 <link rel="stylesheet" href="css/style.min.css">
     <title>Document</title>
 </head>
-<body>
-    <div class="wrapper">
-        <main class="main">
-            <div class="_container">
-                <div class="product-catalog">
-                    <div class="product-catalog__top">
-                        <div class="product-catalog-about__text">Каталог техники</div>
+    <body>
+        <div class="wrapper">
+            <main class="main">
+                <div class="_container">
+                    <div class="product-catalog">
+                        <div class="product-catalog__top">
+                           <p>Каталог техники</p> 
+                            </div>
+                        <div class="product-catalog__wrapper">
+                                    <div class="product-catalog__card-lists"> 
+                                        <div class="product-catalog__card product-catalog-card">
+                                            <div class="product-catalog-card__img">
+                                                <img src="img/product-catalog/1.png" alt="">
+                                            </div>
+                                            <div class="product-catalog-card__title">Триплексные насосы</div>
+                                        </div>        
+                                        <div class="product-catalog__card product-catalog-card">
+                                            <div class="product-catalog-card__img">
+                                                <img src="img/product-catalog/2.png" alt="">
+                                            </div>
+                                            <div class="product-catalog-card__title">Смесительные агрегаты</div>
+                                        </div> 
+                                        <div class="product-catalog__card product-catalog-card">
+                                            <div class="product-catalog-card__img">
+                                                <img src="img/product-catalog/3.png" alt="">
+                                            </div>
+                                            <div class="product-catalog-card__title">Компактные системы 
+                                                для струйной цементации 
+                                                Jet Grouting</div>
+                                        </div> 
+                                        <div class="product-catalog__card product-catalog-card">
+                                            <div class="product-catalog-card__img">
+                                                <img src="img/product-catalog/4.png" alt="">
+                                            </div>
+                                            <div class="product-catalog-card__title">Инъекционные агрегаты</div>
+                                        </div>                                                     
+                                    </div>  
+                                    <div class="product-catalog__card-lists"> 
+                                        <div class="product-catalog__card product-catalog-card">
+                                            <div class="product-catalog-card__img">
+                                                <img src="img/product-catalog/5.png" alt="">
+                                            </div>
+                                            <div class="product-catalog-card__title">Триплексные насосы</div>
+                                        </div>        
+                                        <div class="product-catalog__card product-catalog-card">
+                                            <div class="product-catalog-card__img">
+                                                <img src="img/product-catalog/6.png" alt="">
+                                            </div>
+                                            <div class="product-catalog-card__title">Контейнерные инъекционные агрегаты</div>
+                                        </div> 
+                                        <div class="product-catalog__card product-catalog-card">
+                                            <div class="product-catalog-card__img">
+                                                <img src="img/product-catalog/7.png" alt="">
+                                            </div>
+                                            <div class="product-catalog-card__title">Силосы для сыпучих материалов</div>
+                                        </div> 
+                                        <div class="product-catalog__card product-catalog-card">
+                                            <div class="product-catalog-card__img">
+                                                <img src="img/product-catalog/8.png" alt="">
+                                            </div>
+                                            <div class="product-catalog-card__title">Буровая колонна</div>
+                                        </div>                                                     
+                                    </div>   
+                        </div>
+                            </div>
+                        </div>             
                     </div>
-                    <div class="product-catalog__body">
-                        <div class="product-catalog__card-list-catalog card-list-catalog"> 
-
-                                <div class="card-list-catalog__card catalog-card">
-                                    <div class="catalog-card__img">
-                                        <img src="img/product-catalog/1.png" alt="">
-                                    </div>
-                                    <div class="catalog-card__title">Триплексные насосы</div>
-                                </div>                                <div class="card-list-catalog__card catalog-card">
-                                    <div class="catalog-card__img">
-                                        <img src="img/product-catalog/2.png" alt="">
-                                    </div>
-                                    <div class="catalog-card__title">Триплексные насосы</div>
-                                </div>                                <div class="card-list-catalog__card catalog-card">
-                                    <div class="catalog-card__img">
-                                        <img src="img/product-catalog/3.png" alt="">
-                                    </div>
-                                    <div class="catalog-card__title">Триплексные насосы</div>
-                                </div>                                <div class="card-list-catalog__card catalog-card">
-                                    <div class="catalog-card__img">
-                                        <img src="img/product-catalog/4.png" alt="">
-                                    </div>
-                                    <div class="catalog-card__title">Триплексные насосы</div>
-                                </div>                                <div class="card-list-catalog__card catalog-card">
-                                    <div class="catalog-card__img">
-                                        <img src="img/product-catalog/5.png" alt="">
-                                    </div>
-                                    <div class="catalog-card__title">Триплексные насосы</div>
-                                </div>                                <div class="card-list-catalog__card catalog-card">
-                                    <div class="catalog-card__img">
-                                        <img src="img/product-catalog/6.png" alt="">
-                                    </div>
-                                    <div class="catalog-card__title">Триплексные насосы</div>
-                                </div>                                <div class="card-list-catalog__card catalog-card">
-                                    <div class="catalog-card__img">
-                                        <img src="img/product-catalog/7.png" alt="">
-                                    </div>
-                                    <div class="catalog-card__title">Триплексные насосы</div>
-                                </div>
-                                <div class="card-list-catalog__card catalog-card">
-                                    <div class="catalog-card__img">
-                                        <img src="img/product-catalog/8.png" alt="">
-                                    </div>
-                                    <div class="catalog-card__title">Триплексные насосы</div>
-                                </div>
                 </div>
-            </div>
-        </main>
-    </div>
-</body>
+            </main>
+        </div>
+    </body>
 </html>
