--- a/app/pages/product-about.html
+++ b/app/pages/product-about.html
@@ -8,14 +8,14 @@
     <link rel="stylesheet" href="../css/reset.css">
     <link rel="stylesheet" href="../css/_global.css">
     <link rel="stylesheet" href="../css/style.min.css">
-    
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="wrapper">
-        <main class="main">
+    @@include('../components/header.html')
+    <main class="main">
             <div class="_container">
                 <div class="product-about-wrapper">
                     <div class="product-about-wrapper__name name">
@@ -23,15 +23,16 @@
                             <img src="../img/product-information/1.png" alt="">
                         </div>
                         <div class="name__info">
-                                <div class="name__title">Название товара</div>  
-                                <div class="name__text">Lorem Ipsum has been the industry's 
-                                    standard dummy text ever since the 1500s, 
-                                    when an unknown printer took a galley of 
-                                    type and scrambled it to make a type 
-                                    specimen book. It has survived not only 
-                                    five centuries, but also the leap into 
-                                    electronic typesetting,</div> 
-                                <a href="" class="name__button">Оставить заявку</a>
+                            <div class="name__title">Название товара</div>
+                            <div class="name__text">Lorem Ipsum has been the industry's
+                                standard dummy text ever since the 1500s,
+                                when an unknown printer took a galley of
+                                type and scrambled it to make a type
+                                specimen book. It has survived not only
+                                five centuries, but also the leap into
+                                electronic typesetting,
+                            </div>
+                            <a href="" class="name__button">Оставить заявку</a>
                         </div>
                     </div>
                     <div class="product-about-wrapper__images images">
@@ -43,7 +44,7 @@
                     </div>
                 </div>
             </div>
-        </main>
-    </div>
+</main>
+    @@include('../components/footer.html')
 </body>
 </html>
