--- a/app/pages/index.html
+++ b/app/pages/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
 <div class="wrapper">
-    @@include('../components/header.html')
+    @@include('../components/header.html', {"class": "main"})
     <main class="main">
         @@include('../components/index/main-block.html')
         @@include('../components/index/about-company-block.html')
