--- a/app/index.html
+++ b/app/index.html
@@ -18,9 +18,9 @@
     <header class="header page-padding main">
     <div class="header__inner">
         <div class="header__menu">
-            <div class="header__menu-logo">
+            <a href="" class="header__menu-logo">
                 <img src="img/header/logo.svg" alt="">
-            </div>
+            </a>
             <div class="header__menu-mail">
                 <svg width="42" height="42" viewBox="0 0 42 42" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M27.4 14.6001C27.8243 14.6001 28.2313 14.7687 28.5314 15.0687C28.8314 15.3688 29 15.7758 29 16.2001V25.8001C29 26.2244 28.8314 26.6314 28.5314 26.9315C28.2313 27.2315 27.8243 27.4001 27.4 27.4001H14.6C14.1757 27.4001 13.7687 27.2315 13.4686 26.9315C13.1686 26.6314 13 26.2244 13 25.8001V16.2001C13 15.3201 13.72 14.6001 14.6 14.6001H27.4ZM23.904 21.8801L29 25.8001V24.2001L24.904 21.0801L29 17.8001V16.2001L21 22.6001L13 16.2001V17.8001L17.096 21.0801L13 24.2001V25.8001L18.096 21.8801L21 24.2001L23.904 21.8801Z"
@@ -46,7 +46,7 @@
                 <img src="img/header/04.png" alt="" class="header__line">
             </div>
             <div class="header__sub-menu-item">
-                <a href="/product-information.html" class="header__link">Каталог техники</a>
+                <a href="/product-about.html" class="header__link">Каталог техники</a>
                 <img src="img/header/04.png" alt="" class="header__line">
             </div>
             <div class="header__sub-menu-item">
@@ -54,18 +54,18 @@
                 <img src="img/header/04.png" alt="" class="header__line">
             </div>
             <div class="header__sub-menu-item">
-                <a href="" class="header__link">О компании</a>
+                <a href="#about" class="header__link">О компании</a>
                 <img src="img/header/04.png" alt="" class="header__line">
             </div>
             <div class="header__sub-menu-item">
-                <a href="" class="header__link">Статьи</a>
+                <a href="/product-catalog-about.html" class="header__link">Статьи</a>
                 <img src="img/header/04.png" alt="" class="header__line">
             </div>
         </nav>
     </div>
     <div class="header__mobile page-padding">
         <div class="header__left">
-            <div class="header__menu-logo"><img src="img/header/logo.svg" alt=""></div>
+            <a href="" class="header__menu-logo"><img src="img/header/logo.svg" alt=""></a>
             <div class="header__menu-mail">
                 <svg width="42" height="42" viewBox="0 0 42 42" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M27.4 14.6001C27.8243 14.6001 28.2313 14.7687 28.5314 15.0687C28.8314 15.3688 29 15.7758 29 16.2001V25.8001C29 26.2244 28.8314 26.6314 28.5314 26.9315C28.2313 27.2315 27.8243 27.4001 27.4 27.4001H14.6C14.1757 27.4001 13.7687 27.2315 13.4686 26.9315C13.1686 26.6314 13 26.2244 13 25.8001V16.2001C13 15.3201 13.72 14.6001 14.6 14.6001H27.4ZM23.904 21.8801L29 25.8001V24.2001L24.904 21.0801L29 17.8001V16.2001L21 22.6001L13 16.2001V17.8001L17.096 21.0801L13 24.2001V25.8001L18.096 21.8801L21 24.2001L23.904 21.8801Z"
@@ -169,7 +169,8 @@
         </div>
     </section>
 </div>
-        <section class="card-list page-padding">
+        <div id="about">
+            <section class="card-list page-padding">
     <div class="card-list__item item">
         <div class="item__up">
             <div class="item__logo">
@@ -248,7 +249,7 @@
         </div>
     </div>
 </section>
-<section class="main-about page-padding">
+<section id="@@idScroll" class="main-about page-padding">
     <div class="main-about__doc">
         <img src="../img/about/01.png" alt="">
     </div>
@@ -266,6 +267,7 @@
     </div>
 </section>
 
+        </div>
         <section class="main-help">
     <div class="main-help__container2 page-padding">
         <div class="main-help__info">
@@ -511,9 +513,9 @@
     </div>
 </section>
     </main>
-    <footer class="footer page-padding">
+    <footer class="footer page-padding @@class">
     <div class="footer__menu">
-        <div class="footer__menu-logo"><img src="img/footer/logo-footer.svg" alt=""></div>
+        <a href="/" class="footer__menu-logo"><img src="img/footer/logo-footer.svg" alt=""></a>
         <div class="footer__menu-mail">
             <svg width="43" height="43" viewBox="0 0 43 43" fill="none"
                  xmlns="http://www.w3.org/2000/svg">
