--- a/app/product-about.html
+++ b/app/product-about.html
@@ -29,7 +29,7 @@
                     <path opacity="0.5" d="M41.9971 21.4838C41.9971 32.5968 32.8272 41.6205 21.4971 41.6205C10.167 41.6205 0.99707 32.5968 0.99707 21.4838C0.99707 10.3708 10.167 1.34717 21.4971 1.34717C32.8272 1.34717 41.9971 10.3708 41.9971 21.4838Z" stroke="#1D1717"/>
                     <defs>
                         <clipPath id="clip0_611_54">
-                            <rect width="16" height="15.7232" fill="white" transform="translate(13.4971 13.6221)"/>
+                            <rect width="16" height="15.7232" fill="black" transform="translate(13.4971 13.6221)"/>
                         </clipPath>
                     </defs>
                 </svg>
@@ -47,54 +47,55 @@
             <div class="header-black__sub-menu-item-square">
                 <div class="sub-menu-item-square__title">
                     <img src="img/header-black/03.png" alt="">
-                    <a href="" class="header-black__link">Главная</a></div>
-                <img src="img/header-black/04.png" alt="" class="header-black__line">
+                    <a href="" class="header-black__link">Главная</a>
+                </div>
+                <div class="splitter"></div>
             </div>
             <div class="header-black__sub-menu-item">
                 <a href="/product-about.html" class="header-black__link">Каталог техники</a>
-                <img src="img/header-black/04.png" alt="" class="header-black__line">
+                <div class="splitter"></div>
             </div>
             <div class="header-black__sub-menu-item">
                 <a href="/product-catalog.html" class="header-black__link">Каталог запчастей</a>
-                <img src="img/header-black/04.png" alt="" class="header-black__line">
+                <div class="splitter"></div>
             </div>
             <div class="header-black__sub-menu-item">
                 <a href="#about" class="header-black__link">О компании</a>
-                <img src="img/header-black/04.png" alt="" class="header-black__line">
+                <div class="splitter"></div>
             </div>
             <div class="header-black__sub-menu-item">
                 <a href="/product-catalog-about.html" class="header-black__link">Статьи</a>
-                <img src="img/header-black/04.png" alt="" class="header-black__line">
+                <div class="splitter"></div>
             </div>
         </nav>
     </div>
-    <div class="header-black__mobile page-padding">
+    <div class="header-black__mobile">
         <div class="header-black__left">
             <a href="" class="header-black__menu-logo"><img src="img/header-black/logo.svg" alt=""></a>
+            <div class="header-black__menu-phone">
+                <svg width="42" height="42" viewBox="0 0 42 42" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <circle opacity="0.5" cx="21" cy="21" r="20.5" stroke="black"/>
+                    <path d="M27.9996 25.7576V27.8978C28.0004 28.0965 27.9602 28.2931 27.8817 28.4752C27.8031 28.6572 27.6879 28.8206 27.5435 28.9549C27.399 29.0892 27.2285 29.1915 27.0428 29.2551C26.8571 29.3188 26.6603 29.3424 26.465 29.3245C24.299 29.086 22.2183 28.3359 20.3902 27.1344C18.6895 26.0392 17.2475 24.5778 16.1667 22.8541C14.9771 20.993 14.2368 18.8741 14.0057 16.669C13.9881 16.4718 14.0113 16.2729 14.0736 16.0852C14.136 15.8975 14.2363 15.725 14.3681 15.5787C14.4998 15.4324 14.6602 15.3155 14.839 15.2355C15.0178 15.1555 15.2111 15.114 15.4065 15.1138H17.5183C17.8599 15.1104 18.1911 15.233 18.4501 15.4588C18.7091 15.6845 18.8783 15.998 18.9261 16.3409C19.0152 17.0258 19.1805 17.6983 19.4188 18.3455C19.5135 18.6008 19.534 18.8783 19.4779 19.1451C19.4218 19.4119 19.2913 19.6568 19.1021 19.8507L18.2081 20.7567C19.2102 22.5427 20.6693 24.0215 22.4316 25.0371L23.3256 24.1311C23.5169 23.9393 23.7586 23.8071 24.0218 23.7502C24.2851 23.6933 24.5589 23.7141 24.8108 23.8101C25.4495 24.0516 26.113 24.2191 26.7888 24.3094C27.1308 24.3583 27.4431 24.5329 27.6663 24.7999C27.8895 25.0669 28.0081 25.4077 27.9996 25.7576Z"
+                          fill="black"/>
+                </svg>
+                <a href="tel:(+39) 0523 524086">(+39) 0523 524086</a>
+            </div>
             <div class="header-black__menu-mail">
                 <svg width="42" height="42" viewBox="0 0 42 42" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M27.4 14.6001C27.8243 14.6001 28.2313 14.7687 28.5314 15.0687C28.8314 15.3688 29 15.7758 29 16.2001V25.8001C29 26.2244 28.8314 26.6314 28.5314 26.9315C28.2313 27.2315 27.8243 27.4001 27.4 27.4001H14.6C14.1757 27.4001 13.7687 27.2315 13.4686 26.9315C13.1686 26.6314 13 26.2244 13 25.8001V16.2001C13 15.3201 13.72 14.6001 14.6 14.6001H27.4ZM23.904 21.8801L29 25.8001V24.2001L24.904 21.0801L29 17.8001V16.2001L21 22.6001L13 16.2001V17.8001L17.096 21.0801L13 24.2001V25.8001L18.096 21.8801L21 24.2001L23.904 21.8801Z"
-                          fill="white"/>
-                    <circle opacity="0.5" cx="21" cy="21" r="20.5" stroke="white"/>
+                          fill="black"/>
+                    <circle opacity="0.5" cx="21" cy="21" r="20.5" stroke="black"/>
                 </svg>
                 <a class="header-black__email" href="emailto:tecniwell@mail.com">tecniwell@mail.com</a>
-            </div>
-            <div class="header-black__menu-phone">
-                <svg width="42" height="42" viewBox="0 0 42 42" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <circle opacity="0.5" cx="21" cy="21" r="20.5" stroke="white"/>
-                    <path d="M27.9996 25.7576V27.8978C28.0004 28.0965 27.9602 28.2931 27.8817 28.4752C27.8031 28.6572 27.6879 28.8206 27.5435 28.9549C27.399 29.0892 27.2285 29.1915 27.0428 29.2551C26.8571 29.3188 26.6603 29.3424 26.465 29.3245C24.299 29.086 22.2183 28.3359 20.3902 27.1344C18.6895 26.0392 17.2475 24.5778 16.1667 22.8541C14.9771 20.993 14.2368 18.8741 14.0057 16.669C13.9881 16.4718 14.0113 16.2729 14.0736 16.0852C14.136 15.8975 14.2363 15.725 14.3681 15.5787C14.4998 15.4324 14.6602 15.3155 14.839 15.2355C15.0178 15.1555 15.2111 15.114 15.4065 15.1138H17.5183C17.8599 15.1104 18.1911 15.233 18.4501 15.4588C18.7091 15.6845 18.8783 15.998 18.9261 16.3409C19.0152 17.0258 19.1805 17.6983 19.4188 18.3455C19.5135 18.6008 19.534 18.8783 19.4779 19.1451C19.4218 19.4119 19.2913 19.6568 19.1021 19.8507L18.2081 20.7567C19.2102 22.5427 20.6693 24.0215 22.4316 25.0371L23.3256 24.1311C23.5169 23.9393 23.7586 23.8071 24.0218 23.7502C24.2851 23.6933 24.5589 23.7141 24.8108 23.8101C25.4495 24.0516 26.113 24.2191 26.7888 24.3094C27.1308 24.3583 27.4431 24.5329 27.6663 24.7999C27.8895 25.0669 28.0081 25.4077 27.9996 25.7576Z"
-                          fill="white"/>
-                </svg>
-                <a href="tel:(+39) 0523 524086">(+39) 0523 524086</a>
             </div>
         </div>
         <div class="header-black__right">
             <svg class="modal__burger" width="34" height="34" viewBox="0 0 34 34" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path d="M4.25 17H29.75" stroke="white" stroke-width="2" stroke-linecap="square"
+                <path d="M4.25 17H29.75" stroke="black" stroke-width="2" stroke-linecap="square"
                       stroke-linejoin="round"/>
-                <path d="M4.25 8.5H29.75" stroke="white" stroke-width="2" stroke-linecap="square"
+                <path d="M4.25 8.5H29.75" stroke="black" stroke-width="2" stroke-linecap="square"
                       stroke-linejoin="round"/>
-                <path d="M4.25 25.5H29.75" stroke="white" stroke-width="2" stroke-linecap="square"
+                <path d="M4.25 25.5H29.75" stroke="black" stroke-width="2" stroke-linecap="square"
                       stroke-linejoin="round"/>
             </svg>
         </div>
@@ -107,24 +108,25 @@
             <div class="header-black__sub-menu-item-square">
                 <div class="sub-menu-item-square__title">
                     <img src="../img/header-black/03.png" alt="">
-                    <a href="" class="header-black__link">Главная</a></div>
-                <img src="../img/header-black/04.png" alt="" class="header-black__line">
+                    <a href="" class="header-black__link">Главная</a>
+                </div>
+                <div class="splitter__white"></div>
             </div>
             <div class="header-black__sub-menu-item">
                 <a href="/product-information.html" class="header-black__link">Каталог техники</a>
-                <img src="../img/header-black/04.png" alt="" class="header-black__line">
+                <div class="splitter__white"></div>
             </div>
             <div class="header-black__sub-menu-item">
                 <a href="/product-catalog.html" class="header-black__link">Каталог запчастей</a>
-                <img src="../img/header-black/04.png" alt="" class="header-black__line">
+                <div class="splitter__white"></div>
             </div>
             <div class="header-black__sub-menu-item">
                 <a href="" class="header-black__link">О компании</a>
-                <img src="../img/header-black/04.png" alt="" class="header-black__line">
+                <div class="splitter__white"></div>
             </div>
             <div class="header-black__sub-menu-item">
                 <a href="" class="header-black__link">Статьи</a>
-                <img src="../img/header-black/04.png" alt="" class="header-black__line">
+                <div class="splitter__white"></div>
             </div>
         </nav>
     </div>
@@ -132,8 +134,10 @@
 <script>
     document.getElementsByClassName("modal__burger")[0].addEventListener("click", ()=> {
         document.getElementById("burgerIndex").classList.add("open")
+        document.getElementsByClassName("modal")[0].style.zIndex = "101"
     })
     document.getElementsByClassName("modal__back")[0].addEventListener("click", ()=> {
+        document.getElementsByClassName("modal")[0].style.zIndex = "-1"
         document.getElementById("burgerIndex").classList.remove("open")
     })
 </script>
@@ -170,6 +174,15 @@
         <footer class="footer page-padding @@class">
     <div class="footer__menu">
         <a href="/" class="footer__menu-logo"><img src="img/footer/logo-footer.svg" alt=""></a>
+        <div class="footer__menu-phone">
+            <svg width="43" height="43" viewBox="0 0 43 43" fill="none"
+                 xmlns="http://www.w3.org/2000/svg">
+                <circle opacity="0.5" cx="21.4971" cy="21.8975" r="20.5" stroke="#202122"/>
+                <path d="M28.4966 26.6556V28.7957C28.4974 28.9944 28.4573 29.1911 28.3787 29.3731C28.3002 29.5551 28.185 29.7186 28.0406 29.8529C27.8961 29.9872 27.7255 30.0894 27.5398 30.1531C27.3541 30.2167 27.1573 30.2404 26.9621 30.2225C24.796 29.984 22.7154 29.2338 20.8873 28.0324C19.1865 26.9371 17.7446 25.4757 16.6638 23.7521C15.4742 21.891 14.7338 19.7721 14.5028 17.567C14.4852 17.3697 14.5083 17.1709 14.5707 16.9832C14.6331 16.7954 14.7334 16.6229 14.8651 16.4766C14.9969 16.3304 15.1573 16.2135 15.3361 16.1334C15.5149 16.0534 15.7081 16.012 15.9036 16.0118H18.0153C18.3569 16.0084 18.6881 16.131 18.9471 16.3567C19.2062 16.5825 19.3753 16.896 19.4232 17.2388C19.5123 17.9237 19.6776 18.5962 19.9159 19.2434C20.0106 19.4988 20.0311 19.7763 19.975 20.0431C19.9188 20.3098 19.7884 20.5547 19.5991 20.7487L18.7052 21.6547C19.7072 23.4407 21.1664 24.9195 22.9287 25.935L23.8226 25.029C24.014 24.8372 24.2556 24.705 24.5189 24.6481C24.7821 24.5912 25.0559 24.612 25.3079 24.708C25.9465 24.9495 26.6101 25.117 27.2859 25.2074C27.6278 25.2563 27.9401 25.4308 28.1634 25.6978C28.3866 25.9648 28.5052 26.3057 28.4966 26.6556Z"
+                      fill="#202122"/>
+            </svg>
+            <a href="tel:(+39) 0523 524086">(+39) 0523 524086</a>
+        </div>
         <div class="footer__menu-mail">
             <svg width="43" height="43" viewBox="0 0 43 43" fill="none"
                  xmlns="http://www.w3.org/2000/svg">
@@ -187,40 +200,30 @@
             </svg>
             <a class="footer__email" href="emailto:tecniwell@mail.com">tecniwell@mail.com</a>
         </div>
-        <div class="footer__menu-phone">
-            <svg width="43" height="43" viewBox="0 0 43 43" fill="none"
-                 xmlns="http://www.w3.org/2000/svg">
-                <circle opacity="0.5" cx="21.4971" cy="21.8975" r="20.5" stroke="#202122"/>
-                <path d="M28.4966 26.6556V28.7957C28.4974 28.9944 28.4573 29.1911 28.3787 29.3731C28.3002 29.5551 28.185 29.7186 28.0406 29.8529C27.8961 29.9872 27.7255 30.0894 27.5398 30.1531C27.3541 30.2167 27.1573 30.2404 26.9621 30.2225C24.796 29.984 22.7154 29.2338 20.8873 28.0324C19.1865 26.9371 17.7446 25.4757 16.6638 23.7521C15.4742 21.891 14.7338 19.7721 14.5028 17.567C14.4852 17.3697 14.5083 17.1709 14.5707 16.9832C14.6331 16.7954 14.7334 16.6229 14.8651 16.4766C14.9969 16.3304 15.1573 16.2135 15.3361 16.1334C15.5149 16.0534 15.7081 16.012 15.9036 16.0118H18.0153C18.3569 16.0084 18.6881 16.131 18.9471 16.3567C19.2062 16.5825 19.3753 16.896 19.4232 17.2388C19.5123 17.9237 19.6776 18.5962 19.9159 19.2434C20.0106 19.4988 20.0311 19.7763 19.975 20.0431C19.9188 20.3098 19.7884 20.5547 19.5991 20.7487L18.7052 21.6547C19.7072 23.4407 21.1664 24.9195 22.9287 25.935L23.8226 25.029C24.014 24.8372 24.2556 24.705 24.5189 24.6481C24.7821 24.5912 25.0559 24.612 25.3079 24.708C25.9465 24.9495 26.6101 25.117 27.2859 25.2074C27.6278 25.2563 27.9401 25.4308 28.1634 25.6978C28.3866 25.9648 28.5052 26.3057 28.4966 26.6556Z"
-                      fill="#202122"/>
-            </svg>
-            <a href="tel:(+39) 0523 524086">(+39) 0523 524086</a>
-        </div>
     </div>
     <nav class="footer__sub-menu">
         <div class="footer__sub-menu-item-square">
             <div class="sub-menu-item-square__title">
                 <img src="../img/footer/03.png" alt="">
-                <a href="" class="footer__link">Главная</a></div>
-            <div class="sub-menu-item-square__underline">
-                <img src="../img/footer/04.svg" alt="" class="footer__line">
+                <a href="" class="footer__link">Главная</a>
             </div>
+            <div class="splitter"></div>
         </div>
         <div class="footer__sub-menu-item">
             <a href="" class="footer__link">Каталог техники</a>
-            <img src="../img/footer/04.svg" alt="" class="footer__line">
+            <div class="splitter"></div>
         </div>
         <div class="footer__sub-menu-item">
             <a href="" class="footer__link">Каталог запчастей</a>
-            <img src="../img/footer/04.svg" alt="" class="footer__line">
+            <div class="splitter"></div>
         </div>
         <div class="footer__sub-menu-item">
             <a href="" class="footer__link">О компании</a>
-            <img src="../img/footer/04.svg" alt="" class="footer__line">
+            <div class="splitter"></div>
         </div>
         <div class="footer__sub-menu-item">
             <a href="" class="footer__link">Статьи</a>
-            <img src="../img/footer/04.svg" alt="" class="footer__line">
+            <div class="splitter"></div>
         </div>
     </nav>
 </footer>
