--- a/app/pages/product-catalog.html
+++ b/app/pages/product-catalog.html
@@ -6,78 +6,79 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/reset.css">
     <link rel="stylesheet" href="../css/_global.css">
-<link rel="stylesheet" href="../css/style.min.css">
+    <link rel="stylesheet" href="../css/style.min.css">
     <title>Document</title>
 </head>
-    <body>
-        <div class="wrapper">
-            <main class="main">
-                <div class="_container">
-                    <div class="product-catalog">
-                        <div class="product-catalog__top">
-                           <p>Каталог техники</p> 
+<body>
+<div class="wrapper">
+    @@include('../components/header-black.html', {"class": "base"})
+    <main class="main">
+        <div class="_container">
+            <div class="product-catalog">
+                <div class="product-catalog__top">
+                    <p>Каталог техники</p>
+                </div>
+                <div class="product-catalog__wrapper">
+                    <div class="product-catalog__card-lists">
+                        <div class="product-catalog__card product-catalog-card">
+                            <div class="product-catalog-card__img">
+                                <img src="../img/product-catalog/1.png" alt="">
                             </div>
-                        <div class="product-catalog__wrapper">
-                                    <div class="product-catalog__card-lists"> 
-                                        <div class="product-catalog__card product-catalog-card">
-                                            <div class="product-catalog-card__img">
-                                                <img src="../img/product-catalog/1.png" alt="">
-                                            </div>
-                                            <div class="product-catalog-card__title">Триплексные насосы</div>
-                                        </div>        
-                                        <div class="product-catalog__card product-catalog-card">
-                                            <div class="product-catalog-card__img">
-                                                <img src="../img/product-catalog/2.png" alt="">
-                                            </div>
-                                            <div class="product-catalog-card__title">Смесительные агрегаты</div>
-                                        </div> 
-                                        <div class="product-catalog__card product-catalog-card">
-                                            <div class="product-catalog-card__img">
-                                                <img src="../img/product-catalog/3.png" alt="">
-                                            </div>
-                                            <div class="product-catalog-card__title">Компактные системы 
-                                                для струйной цементации 
-                                                Jet Grouting</div>
-                                        </div> 
-                                        <div class="product-catalog__card product-catalog-card">
-                                            <div class="product-catalog-card__img">
-                                                <img src="../img/product-catalog/4.png" alt="">
-                                            </div>
-                                            <div class="product-catalog-card__title">Инъекционные агрегаты</div>
-                                        </div>                                                     
-                                    </div>  
-                                    <div class="product-catalog__card-lists"> 
-                                        <div class="product-catalog__card product-catalog-card">
-                                            <div class="product-catalog-card__img">
-                                                <img src="../img/product-catalog/5.png" alt="">
-                                            </div>
-                                            <div class="product-catalog-card__title">Триплексные насосы</div>
-                                        </div>        
-                                        <div class="product-catalog__card product-catalog-card">
-                                            <div class="product-catalog-card__img">
-                                                <img src="../img/product-catalog/6.png" alt="">
-                                            </div>
-                                            <div class="product-catalog-card__title">Контейнерные инъекционные агрегаты</div>
-                                        </div> 
-                                        <div class="product-catalog__card product-catalog-card">
-                                            <div class="product-catalog-card__img">
-                                                <img src="../img/product-catalog/7.png" alt="">
-                                            </div>
-                                            <div class="product-catalog-card__title">Силосы для сыпучих материалов</div>
-                                        </div> 
-                                        <div class="product-catalog__card product-catalog-card">
-                                            <div class="product-catalog-card__img">
-                                                <img src="../img/product-catalog/8.png" alt="">
-                                            </div>
-                                            <div class="product-catalog-card__title">Буровая колонна</div>
-                                        </div>                                                     
-                                    </div>   
+                            <div class="product-catalog-card__title">Триплексные насосы</div>
                         </div>
+                        <div class="product-catalog__card product-catalog-card">
+                            <div class="product-catalog-card__img">
+                                <img src="../img/product-catalog/2.png" alt="">
                             </div>
-                        </div>             
+                            <div class="product-catalog-card__title">Смесительные агрегаты</div>
+                        </div>
+                        <div class="product-catalog__card product-catalog-card">
+                            <div class="product-catalog-card__img">
+                                <img src="../img/product-catalog/3.png" alt="">
+                            </div>
+                            <div class="product-catalog-card__title">Компактные системы
+                                для струйной цементации
+                                Jet Grouting
+                            </div>
+                        </div>
+                        <div class="product-catalog__card product-catalog-card">
+                            <div class="product-catalog-card__img">
+                                <img src="../img/product-catalog/4.png" alt="">
+                            </div>
+                            <div class="product-catalog-card__title">Инъекционные агрегаты</div>
+                        </div>
+                    </div>
+                    <div class="product-catalog__card-lists">
+                        <div class="product-catalog__card product-catalog-card">
+                            <div class="product-catalog-card__img">
+                                <img src="../img/product-catalog/5.png" alt="">
+                            </div>
+                            <div class="product-catalog-card__title">Триплексные насосы</div>
+                        </div>
+                        <div class="product-catalog__card product-catalog-card">
+                            <div class="product-catalog-card__img">
+                                <img src="../img/product-catalog/6.png" alt="">
+                            </div>
+                            <div class="product-catalog-card__title">Контейнерные инъекционные агрегаты</div>
+                        </div>
+                        <div class="product-catalog__card product-catalog-card">
+                            <div class="product-catalog-card__img">
+                                <img src="../img/product-catalog/7.png" alt="">
+                            </div>
+                            <div class="product-catalog-card__title">Силосы для сыпучих материалов</div>
+                        </div>
+                        <div class="product-catalog__card product-catalog-card">
+                            <div class="product-catalog-card__img">
+                                <img src="../img/product-catalog/8.png" alt="">
+                            </div>
+                            <div class="product-catalog-card__title">Буровая колонна</div>
+                        </div>
                     </div>
                 </div>
-            </main>
+            </div>
         </div>
-    </body>
+    </main>
+    @@include('../components/footer.html')
+</div>
+</body>
 </html>
