ready github pages

--- a/app/product-about.html
+++ b/app/product-about.html
@@ -107,7 +107,7 @@
         <nav class="header-black__sub-menu">
             <div class="header-black__sub-menu-item-square">
                 <div class="sub-menu-item-square__title">
-                    <img src="../img/header-black/03.png" alt="">
+                    <img src="img/header-black/03.png" alt="">
                     <a href="" class="header-black__link">Главная</a>
                 </div>
                 <div class="splitter__white"></div>
@@ -146,7 +146,7 @@
                 <div class="product-about-wrapper">
                     <div class="product-about-wrapper__name name">
                         <div class="name__img">
-                            <img src="../img/product-information/1.png" alt="">
+                            <img src="img/product-information/1.png" alt="">
                         </div>
                         <div class="name__info">
                             <div class="name__title">Название товара</div>
@@ -162,11 +162,11 @@
                         </div>
                     </div>
                     <div class="product-about-wrapper__images images">
-                        <img src="../img/product-information/2.png" alt="">
-                        <img src="../img/product-information/3.png" alt="">
+                        <img src="img/product-information/2.png" alt="">
+                        <img src="img/product-information/3.png" alt="">
                     </div>
                     <div class="product-about-wrapper__document document">
-                        <img src="../img/product-information/4.png" alt="">
+                        <img src="img/product-information/4.png" alt="">
                     </div>
                 </div>
             </div>
@@ -204,7 +204,7 @@
     <nav class="footer__sub-menu">
         <div class="footer__sub-menu-item-square">
             <div class="sub-menu-item-square__title">
-                <img src="../img/footer/03.png" alt="">
+                <img src="img/footer/03.png" alt="">
                 <a href="" class="footer__link">Главная</a>
             </div>
             <div class="splitter"></div>
