--- a/app/product-catalog-about.html
+++ b/app/product-catalog-about.html
@@ -105,7 +105,7 @@
         <nav class="header-black__sub-menu">
             <div class="header-black__sub-menu-item-square">
                 <div class="sub-menu-item-square__title">
-                    <img src="../img/header-black/03.png" alt="">
+                    <img src="img/header-black/03.png" alt="">
                     <a href="" class="header-black__link">Главная</a>
                 </div>
                 <div class="splitter__white"></div>
@@ -163,7 +163,7 @@
                 <div class="product-catalog-about__card-list">
                     <div class="card">
                         <div class="card__img">
-                            <img src="../img/product-catalog/01.png" alt="">
+                            <img src="img/product-catalog/01.png" alt="">
                         </div>
                         <div class="card__title">Блок смешивание</div>
                         <div class="card__text">Lorem Ipsum, giving
@@ -177,7 +177,7 @@
                     </div>
                     <div class="card">
                         <div class="card__img">
-                            <img src="../img/product-catalog/01.png" alt="">
+                            <img src="img/product-catalog/01.png" alt="">
                         </div>
                         <div class="card__title">Блок смешивание</div>
                         <div class="card__text">Lorem Ipsum, giving
@@ -191,7 +191,7 @@
                     </div>
                     <div class="card">
                         <div class="card__img">
-                            <img src="../img/product-catalog/01.png" alt="">
+                            <img src="img/product-catalog/01.png" alt="">
                         </div>
                         <div class="card__title">Блок смешивание</div>
                         <div class="card__text">Lorem Ipsum, giving
@@ -205,7 +205,7 @@
                     </div>
                     <div class="card">
                         <div class="card__img">
-                            <img src="../img/product-catalog/01.png" alt="">
+                            <img src="img/product-catalog/01.png" alt="">
                         </div>
                         <div class="card__title">Блок смешивание</div>
                         <div class="card__text">Lorem Ipsum, giving
@@ -219,7 +219,7 @@
                     </div>
                     <div class="card">
                         <div class="card__img">
-                            <img src="../img/product-catalog/01.png" alt="">
+                            <img src="img/product-catalog/01.png" alt="">
                         </div>
                         <div class="card__title">Блок смешивание</div>
                         <div class="card__text">Lorem Ipsum, giving
@@ -233,7 +233,7 @@
                     </div>
                     <div class="card">
                         <div class="card__img">
-                            <img src="../img/product-catalog/01.png" alt="">
+                            <img src="img/product-catalog/01.png" alt="">
                         </div>
                         <div class="card__title">Блок смешивание</div>
                         <div class="card__text">Lorem Ipsum, giving
@@ -247,7 +247,7 @@
                     </div>
                     <div class="card">
                         <div class="card__img">
-                            <img src="../img/product-catalog/01.png" alt="">
+                            <img src="img/product-catalog/01.png" alt="">
                         </div>
                         <div class="card__title">Блок смешивание</div>
                         <div class="card__text">Lorem Ipsum, giving
@@ -261,7 +261,7 @@
                     </div>
                     <div class="card">
                         <div class="card__img">
-                            <img src="../img/product-catalog/01.png" alt="">
+                            <img src="img/product-catalog/01.png" alt="">
                         </div>
                         <div class="card__title">Блок смешивание</div>
                         <div class="card__text">Lorem Ipsum, giving
@@ -275,7 +275,7 @@
                     </div>
                     <div class="card">
                         <div class="card__img">
-                            <img src="../img/product-catalog/01.png" alt="">
+                            <img src="img/product-catalog/01.png" alt="">
                         </div>
                         <div class="card__title">Блок смешивание</div>
                         <div class="card__text">Lorem Ipsum, giving
@@ -289,7 +289,7 @@
                     </div>
                     <div class="card">
                         <div class="card__img">
-                            <img src="../img/product-catalog/01.png" alt="">
+                            <img src="img/product-catalog/01.png" alt="">
                         </div>
                         <div class="card__title">Блок смешивание</div>
                         <div class="card__text">Lorem Ipsum, giving
@@ -338,7 +338,7 @@
     <nav class="footer__sub-menu">
         <div class="footer__sub-menu-item-square">
             <div class="sub-menu-item-square__title">
-                <img src="../img/footer/03.png" alt="">
+                <img src="img/footer/03.png" alt="">
                 <a href="" class="footer__link">Главная</a>
             </div>
             <div class="splitter"></div>
