--- a/app/product-catalog.html
+++ b/app/product-catalog.html
@@ -103,7 +103,7 @@
         <nav class="header-black__sub-menu">
             <div class="header-black__sub-menu-item-square">
                 <div class="sub-menu-item-square__title">
-                    <img src="../img/header-black/03.png" alt="">
+                    <img src="img/header-black/03.png" alt="">
                     <a href="" class="header-black__link">Главная</a>
                 </div>
                 <div class="splitter__white"></div>
@@ -147,19 +147,19 @@
                     <div class="product-catalog__card-lists">
                         <div class="product-catalog__card product-catalog-card">
                             <div class="product-catalog-card__img">
-                                <img src="../img/product-catalog/1.png" alt="">
+                                <img src="img/product-catalog/1.png" alt="">
                             </div>
                             <div class="product-catalog-card__title">Триплексные насосы</div>
                         </div>
                         <div class="product-catalog__card product-catalog-card">
                             <div class="product-catalog-card__img">
-                                <img src="../img/product-catalog/2.png" alt="">
+                                <img src="img/product-catalog/2.png" alt="">
                             </div>
                             <div class="product-catalog-card__title">Смесительные агрегаты</div>
                         </div>
                         <div class="product-catalog__card product-catalog-card">
                             <div class="product-catalog-card__img">
-                                <img src="../img/product-catalog/3.png" alt="">
+                                <img src="img/product-catalog/3.png" alt="">
                             </div>
                             <div class="product-catalog-card__title">Компактные системы
                                 для струйной цементации
@@ -168,7 +168,7 @@
                         </div>
                         <div class="product-catalog__card product-catalog-card">
                             <div class="product-catalog-card__img">
-                                <img src="../img/product-catalog/4.png" alt="">
+                                <img src="img/product-catalog/4.png" alt="">
                             </div>
                             <div class="product-catalog-card__title">Инъекционные агрегаты</div>
                         </div>
@@ -176,25 +176,25 @@
                     <div class="product-catalog__card-lists">
                         <div class="product-catalog__card product-catalog-card">
                             <div class="product-catalog-card__img">
-                                <img src="../img/product-catalog/5.png" alt="">
+                                <img src="img/product-catalog/5.png" alt="">
                             </div>
                             <div class="product-catalog-card__title">Триплексные насосы</div>
                         </div>
                         <div class="product-catalog__card product-catalog-card">
                             <div class="product-catalog-card__img">
-                                <img src="../img/product-catalog/6.png" alt="">
+                                <img src="img/product-catalog/6.png" alt="">
                             </div>
                             <div class="product-catalog-card__title">Контейнерные инъекционные агрегаты</div>
                         </div>
                         <div class="product-catalog__card product-catalog-card">
                             <div class="product-catalog-card__img">
-                                <img src="../img/product-catalog/7.png" alt="">
+                                <img src="img/product-catalog/7.png" alt="">
                             </div>
                             <div class="product-catalog-card__title">Силосы для сыпучих материалов</div>
                         </div>
                         <div class="product-catalog__card product-catalog-card">
                             <div class="product-catalog-card__img">
-                                <img src="../img/product-catalog/8.png" alt="">
+                                <img src="img/product-catalog/8.png" alt="">
                             </div>
                             <div class="product-catalog-card__title">Буровая колонна</div>
                         </div>
@@ -236,7 +236,7 @@
     <nav class="footer__sub-menu">
         <div class="footer__sub-menu-item-square">
             <div class="sub-menu-item-square__title">
-                <img src="../img/footer/03.png" alt="">
+                <img src="img/footer/03.png" alt="">
                 <a href="" class="footer__link">Главная</a>
             </div>
             <div class="splitter"></div>
