--- a/app/spare-parts.html
+++ b/app/spare-parts.html
@@ -107,7 +107,7 @@
         <nav class="header-black__sub-menu">
             <div class="header-black__sub-menu-item-square">
                 <div class="sub-menu-item-square__title">
-                    <img src="../img/header-black/03.png" alt="">
+                    <img src="img/header-black/03.png" alt="">
                     <a href="" class="header-black__link">Главная</a>
                 </div>
                 <div class="splitter__white"></div>
@@ -170,7 +170,7 @@
                 <tr align="center">
                     <td class="spare-parts-page__card-name">
                         <div class="card-name-spare__img">
-                            <img src="../img/spare_frame/01.png" alt="">
+                            <img src="img/spare_frame/01.png" alt="">
                         </div>
                         <div class="card-name-spare__text">Название товара</div>
                     </td>
@@ -185,7 +185,7 @@
                 <div class="spare-parts-page__wrapper__card">
   <div class="spare-parts-page__wrapper__card-top">
     <div class="card-name-spare__img">
-      <img src="../img/spare_frame/01.png" alt="">
+      <img src="img/spare_frame/01.png" alt="">
     </div>
     <div class="card-name-spare__text">Название товара</div>
   </div>
@@ -232,7 +232,7 @@
     <nav class="footer__sub-menu">
         <div class="footer__sub-menu-item-square">
             <div class="sub-menu-item-square__title">
-                <img src="../img/footer/03.png" alt="">
+                <img src="img/footer/03.png" alt="">
                 <a href="" class="footer__link">Главная</a>
             </div>
             <div class="splitter"></div>
