--- a/app/index.html
+++ b/app/index.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/style.min.css">
-    <link rel="stylesheet" href="css/_global.css">
+    <link rel="stylesheet" href="../css/reset.css">
+    <link rel="stylesheet" href="../css/style.min.css">
+    <link rel="stylesheet" href="../css/_global.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">
@@ -102,7 +102,7 @@
         <nav class="header__sub-menu">
             <div class="header__sub-menu-item-square">
                 <div class="sub-menu-item-square__title">
-                    <img src="../img/header/03.png" alt="">
+                    <img src="img/header/03.png" alt="">
                     <a href="" class="header__link">Главная</a>
                 </div>
                 <div class="splitter__white"></div>
@@ -255,7 +255,7 @@
 </section>
 <section id="@@idScroll" class="main-about page-padding">
     <div class="main-about__doc">
-        <img src="../img/about/01.png" alt="">
+        <img src="img/about/01.png" alt="">
     </div>
     <div class="main-about__info">
         <div class="main-about__title">О компании</div>
@@ -285,7 +285,7 @@
             </div>
         </div>
         <a href="" class="main-help__img">
-            <img src="../img/help/01.png" alt="">
+            <img src="img/help/01.png" alt="">
         </a>
     </div>
 
@@ -300,39 +300,39 @@
             <div class="main-category__card-opacity"></div>
             <div class="main-category__card-list">
                 <a href="" class="main-category__card">
-                    <img src="../img/card/0.png" alt="">
+                    <img src="img/card/0.png" alt="">
                     <p class="">Триплексные насосы</p>
                 </a>
                 <a href="" class="main-category__card">
-                    <img src="../img/card/0.png" alt="">
+                    <img src="img/card/0.png" alt="">
                     <p class="">Триплексные насосы</p>
                 </a>
                 <a href="" class="main-category__card">
-                    <img src="../img/card/0.png" alt="">
+                    <img src="img/card/0.png" alt="">
                     <p class="">Триплексные насосы</p>
                 </a>
                 <a href="" class="main-category__card">
-                    <img src="../img/card/0.png" alt="">
+                    <img src="img/card/0.png" alt="">
                     <p class="">Триплексные насосы</p>
                 </a>
                 <a href="" class="main-category__card">
-                    <img src="../img/card/0.png" alt="">
+                    <img src="img/card/0.png" alt="">
                     <p class="">Триплексные насосы</p>
                 </a>
                 <a href="" class="main-category__card">
-                    <img src="../img/card/0.png" alt="">
+                    <img src="img/card/0.png" alt="">
                     <p class="">Триплексные насосы</p>
                 </a>
                 <a href="" class="main-category__card">
-                    <img src="../img/card/0.png" alt="">
+                    <img src="img/card/0.png" alt="">
                     <p class="">Триплексные насосы</p>
                 </a>
                 <a href="" class="main-category__card">
-                    <img src="../img/card/0.png" alt="">
+                    <img src="img/card/0.png" alt="">
                     <p class="">Триплексные насосы</p>
                 </a>
                 <a href="" class="main-category__card">
-                    <img src="../img/card/0.png" alt="">
+                    <img src="img/card/0.png" alt="">
                     <p class="">Триплексные насосы</p>
                 </a>
 
@@ -343,9 +343,9 @@
 </section>
         <section class="main-spare page-padding">
   <div class="main-spare__container">
-    <img class="main-spare__img_back" src="../img/spare/01.png" alt="">
+    <img class="main-spare__img_back" src="img/spare/01.png" alt="">
     <div class="main-spare__img">
-      <img src="../img/spare/01.png" alt="">
+      <img src="img/spare/01.png" alt="">
     </div>
     <div class="main-spare__info">
       <div class="main-spare__title">Запасные части <br>
@@ -512,7 +512,7 @@
         </ul>
 
         <div class="main-about-big__img">
-            <img src="../img/big_about/01.png" alt="">
+            <img src="img/big_about/01.png" alt="">
         </div>
     </div>
 </section>
@@ -550,7 +550,7 @@
     <nav class="footer__sub-menu">
         <div class="footer__sub-menu-item-square">
             <div class="sub-menu-item-square__title">
-                <img src="../img/footer/03.png" alt="">
+                <img src="img/footer/03.png" alt="">
                 <a href="" class="footer__link">Главная</a>
             </div>
             <div class="splitter"></div>
