--- a/app/pages/product-about.html
+++ b/app/pages/product-about.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="../css/reset.css">
-    <link rel="stylesheet" href="../css/_global.css">
-    <link rel="stylesheet" href="../css/style.min.css">
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/_global.css">
+    <link rel="stylesheet" href="css/style.min.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -21,7 +21,7 @@
                 <div class="product-about-wrapper">
                     <div class="product-about-wrapper__name name">
                         <div class="name__img">
-                            <img src="../img/product-information/1.png" alt="">
+                            <img src="img/product-information/1.png" alt="">
                         </div>
                         <div class="name__info">
                             <div class="name__title">Название товара</div>
@@ -37,11 +37,11 @@
                         </div>
                     </div>
                     <div class="product-about-wrapper__images images">
-                        <img src="../img/product-information/2.png" alt="">
-                        <img src="../img/product-information/3.png" alt="">
+                        <img src="img/product-information/2.png" alt="">
+                        <img src="img/product-information/3.png" alt="">
                     </div>
                     <div class="product-about-wrapper__document document">
-                        <img src="../img/product-information/4.png" alt="">
+                        <img src="img/product-information/4.png" alt="">
                     </div>
                 </div>
             </div>
