--- a/app/pages/product-catalog-about.html
+++ b/app/pages/product-catalog-about.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="../css/reset.css">
-    <link rel="stylesheet" href="../css/_global.css">
-    <link rel="stylesheet" href="../css/style.min.css">
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/_global.css">
+    <link rel="stylesheet" href="css/style.min.css">
 
     <title>Document</title>
 </head>
@@ -38,7 +38,7 @@
                 <div class="product-catalog-about__card-list">
                     <div class="card">
                         <div class="card__img">
-                            <img src="../img/product-catalog/01.png" alt="">
+                            <img src="img/product-catalog/01.png" alt="">
                         </div>
                         <div class="card__title">Блок смешивание</div>
                         <div class="card__text">Lorem Ipsum, giving
@@ -52,7 +52,7 @@
                     </div>
                     <div class="card">
                         <div class="card__img">
-                            <img src="../img/product-catalog/01.png" alt="">
+                            <img src="img/product-catalog/01.png" alt="">
                         </div>
                         <div class="card__title">Блок смешивание</div>
                         <div class="card__text">Lorem Ipsum, giving
@@ -66,7 +66,7 @@
                     </div>
                     <div class="card">
                         <div class="card__img">
-                            <img src="../img/product-catalog/01.png" alt="">
+                            <img src="img/product-catalog/01.png" alt="">
                         </div>
                         <div class="card__title">Блок смешивание</div>
                         <div class="card__text">Lorem Ipsum, giving
@@ -80,7 +80,7 @@
                     </div>
                     <div class="card">
                         <div class="card__img">
-                            <img src="../img/product-catalog/01.png" alt="">
+                            <img src="img/product-catalog/01.png" alt="">
                         </div>
                         <div class="card__title">Блок смешивание</div>
                         <div class="card__text">Lorem Ipsum, giving
@@ -94,7 +94,7 @@
                     </div>
                     <div class="card">
                         <div class="card__img">
-                            <img src="../img/product-catalog/01.png" alt="">
+                            <img src="img/product-catalog/01.png" alt="">
                         </div>
                         <div class="card__title">Блок смешивание</div>
                         <div class="card__text">Lorem Ipsum, giving
@@ -108,7 +108,7 @@
                     </div>
                     <div class="card">
                         <div class="card__img">
-                            <img src="../img/product-catalog/01.png" alt="">
+                            <img src="img/product-catalog/01.png" alt="">
                         </div>
                         <div class="card__title">Блок смешивание</div>
                         <div class="card__text">Lorem Ipsum, giving
@@ -122,7 +122,7 @@
                     </div>
                     <div class="card">
                         <div class="card__img">
-                            <img src="../img/product-catalog/01.png" alt="">
+                            <img src="img/product-catalog/01.png" alt="">
                         </div>
                         <div class="card__title">Блок смешивание</div>
                         <div class="card__text">Lorem Ipsum, giving
@@ -136,7 +136,7 @@
                     </div>
                     <div class="card">
                         <div class="card__img">
-                            <img src="../img/product-catalog/01.png" alt="">
+                            <img src="img/product-catalog/01.png" alt="">
                         </div>
                         <div class="card__title">Блок смешивание</div>
                         <div class="card__text">Lorem Ipsum, giving
@@ -150,7 +150,7 @@
                     </div>
                     <div class="card">
                         <div class="card__img">
-                            <img src="../img/product-catalog/01.png" alt="">
+                            <img src="img/product-catalog/01.png" alt="">
                         </div>
                         <div class="card__title">Блок смешивание</div>
                         <div class="card__text">Lorem Ipsum, giving
@@ -164,7 +164,7 @@
                     </div>
                     <div class="card">
                         <div class="card__img">
-                            <img src="../img/product-catalog/01.png" alt="">
+                            <img src="img/product-catalog/01.png" alt="">
                         </div>
                         <div class="card__title">Блок смешивание</div>
                         <div class="card__text">Lorem Ipsum, giving
