--- a/app/pages/product-catalog.html
+++ b/app/pages/product-catalog.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/reset.css">
-    <link rel="stylesheet" href="../css/_global.css">
-    <link rel="stylesheet" href="../css/style.min.css">
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/_global.css">
+    <link rel="stylesheet" href="css/style.min.css">
     <title>Document</title>
 </head>
 <body>
@@ -22,19 +22,19 @@
                     <div class="product-catalog__card-lists">
                         <div class="product-catalog__card product-catalog-card">
                             <div class="product-catalog-card__img">
-                                <img src="../img/product-catalog/1.png" alt="">
+                                <img src="img/product-catalog/1.png" alt="">
                             </div>
                             <div class="product-catalog-card__title">Триплексные насосы</div>
                         </div>
                         <div class="product-catalog__card product-catalog-card">
                             <div class="product-catalog-card__img">
-                                <img src="../img/product-catalog/2.png" alt="">
+                                <img src="img/product-catalog/2.png" alt="">
                             </div>
                             <div class="product-catalog-card__title">Смесительные агрегаты</div>
                         </div>
                         <div class="product-catalog__card product-catalog-card">
                             <div class="product-catalog-card__img">
-                                <img src="../img/product-catalog/3.png" alt="">
+                                <img src="img/product-catalog/3.png" alt="">
                             </div>
                             <div class="product-catalog-card__title">Компактные системы
                                 для струйной цементации
@@ -43,7 +43,7 @@
                         </div>
                         <div class="product-catalog__card product-catalog-card">
                             <div class="product-catalog-card__img">
-                                <img src="../img/product-catalog/4.png" alt="">
+                                <img src="img/product-catalog/4.png" alt="">
                             </div>
                             <div class="product-catalog-card__title">Инъекционные агрегаты</div>
                         </div>
@@ -51,25 +51,25 @@
                     <div class="product-catalog__card-lists">
                         <div class="product-catalog__card product-catalog-card">
                             <div class="product-catalog-card__img">
-                                <img src="../img/product-catalog/5.png" alt="">
+                                <img src="img/product-catalog/5.png" alt="">
                             </div>
                             <div class="product-catalog-card__title">Триплексные насосы</div>
                         </div>
                         <div class="product-catalog__card product-catalog-card">
                             <div class="product-catalog-card__img">
-                                <img src="../img/product-catalog/6.png" alt="">
+                                <img src="img/product-catalog/6.png" alt="">
                             </div>
                             <div class="product-catalog-card__title">Контейнерные инъекционные агрегаты</div>
                         </div>
                         <div class="product-catalog__card product-catalog-card">
                             <div class="product-catalog-card__img">
-                                <img src="../img/product-catalog/7.png" alt="">
+                                <img src="img/product-catalog/7.png" alt="">
                             </div>
                             <div class="product-catalog-card__title">Силосы для сыпучих материалов</div>
                         </div>
                         <div class="product-catalog__card product-catalog-card">
                             <div class="product-catalog-card__img">
-                                <img src="../img/product-catalog/8.png" alt="">
+                                <img src="img/product-catalog/8.png" alt="">
                             </div>
                             <div class="product-catalog-card__title">Буровая колонна</div>
                         </div>
