--- a/app/pages/index.html
+++ b/app/pages/index.html
@@ -19,6 +19,7 @@
     <main class="main">
         @@include('../components/index/main-block.html')
         <div id="about">
+            @@include('../components/modal.html')
             @@include('../components/index/about-company-block.html')
         </div>
         @@include('../components/index/help-block.html')
