--- a/app/index.html
+++ b/app/index.html
@@ -39,11 +39,8 @@
             </div>
         </div>
         <nav class="header__sub-menu">
-            <div class="header__sub-menu-item-square">
-                <div class="sub-menu-item-square__title">
-                    <img src="img/header/03.png" alt="">
-                    <a href="" class="header__link">Главная</a>
-                </div>
+            <div class="header__sub-menu-item header__sub-menu-item--square">
+                <a href="" class="header__link">Главная</a>
                 <div class="splitter__white"></div>
             </div>
             <div class="header__sub-menu-item">
